syntax = "proto3";

package scheduling;

option java_multiple_files = true;
option java_package = "sdtrabalho.scheduling.proto";
option java_outer_classname = "SchedulingProto";

enum AppointmentStatus {
  STATUS_UNKNOWN   = 0;
  STATUS_SCHEDULED = 1;
  STATUS_CONFIRMED = 2;
  STATUS_CANCELLED = 3;
  STATUS_COMPLETED = 4;
}

message Appointment {
  int32 id           = 1;
  int32 patient_id   = 2;
  int32 doctor_id    = 3;
  string specialty    = 4;
  string datetime = 5; 
  AppointmentStatus status = 6;
}

message CreateAppointmentRequest {
  int32 patient_id   = 1;
  int32 doctor_id    = 2;
  string specialty    = 3;
  string datetime = 4;
}

message CreateAppointmentResponse {
  Appointment dados = 1;   
  string mensage = 2;      
  bool status = 3;       
}

message ListAppointmentsRequest {
  int32 user_id  = 1;
  bool is_doctor  = 2; 
}

message ListAppointmentsResponse {
  repeated Appointment dados = 1;
  string mensage = 2;       
  bool status = 3;          
}

message UpdateStatusRequest {
  int32 appointment_id      = 1;
  AppointmentStatus new_status = 2;
}

message UpdateStatusResponse {
  Appointment dados = 1;   
  string mensage = 2;      
  bool status = 3; 
}

message DeleteAppointmentRequest {
  int32 appointment_id = 1;
}

message DeleteAppointmentResponse {
  Appointment dados = 1;   
  string mensage = 2;      
  bool status = 3; 
}

service SchedulingService {
  rpc CreateAppointment(CreateAppointmentRequest) returns (CreateAppointmentResponse);
  rpc ListAppointments(ListAppointmentsRequest) returns (ListAppointmentsResponse);
  rpc UpdateStatus(UpdateStatusRequest) returns (UpdateStatusResponse);
  rpc DeleteAppointment(DeleteAppointmentRequest) returns (DeleteAppointmentResponse);
}
